--- a/modalsetting.css
+++ b/modalsetting.css
@@ -22,6 +22,13 @@
 ::-webkit-scrollbar-thumb {
     background: rgb(54, 53, 53);
     }
+    
+select {
+    width: fit-content;
+    padding: 0.25rem 0;
+    appearance: auto;
+    background: transparent;
+}
 
 .modal__container {
     background: rgba(255, 255, 255, 0.5);
@@ -52,7 +59,10 @@
     }
 
 .modal__body-header {
-    margin-bottom: 1rem;
+    padding-left: 1rem;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
 }
 
 .modal__body-header .modal-close-btn {
@@ -89,7 +99,7 @@
     width: 100%;
 }
 
-.user__profile .user__profile-picture {    
+.user__profile-picture {    
     width: 3rem;
     height: 3rem;
     border-radius: var(--circle-border-radius);
@@ -100,7 +110,7 @@
     overflow-y: auto;
     height: 100%;
     padding-right: 1rem;
-    padding-bottom: 2rem;    
+    padding-bottom: 3rem;    
 }
 
 .setting__left-menu {
@@ -133,7 +143,7 @@
 }
 
 .setting__right-header {
-    margin: 1rem 0rem 1rem;
+    margin: 1rem 0rem 1.5rem;
 }
 
 .setting__right-body {
